force-app/main/default/objects/Example__c/Example__c.object-meta.xml
<CustomObject>
    <label>Example</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Example Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examples</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>