force-app/main/default/objects/Example__c/fields/EncryptionText__c.field-meta.xml
<CustomField>
    <fullName>EncryptionText__c</fullName>
    <label>EncryptionText</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>