force-app/main/default/objects/Example__c/fields/Example1__c.field-meta.xml
<CustomField>
    <fullName>Example1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Example1</label>
    <referenceTo>Example1__c</referenceTo>
    <relationshipLabel>Examples</relationshipLabel>
    <relationshipName>Examples</relationshipName>
    <type>Lookup</type>
</CustomField>