force-app/main/default/objects/Example__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>