force-app/main/default/objects/Example__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>isblank(Email_Id__c)</errorConditionFormula>
    <errorMessage>errer</errorMessage>
</ValidationRule>